# minGPT

./: CMakeLists.txt  README.md  gpt.cpp  gpt.cu  gpt.h  run.py  setup.py  test.py
mingpt/: model.py
